<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.2.0.0" ProductVersion="3.1.4024.11">
  <POU Name="MAIN" Id="{aa6047d7-dda4-4a4e-8872-4170f9749e6f}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM MAIN
VAR

END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Main 
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2024
//
// ***********************************************************************************


P_Control_Mode();

// data comunicaiton robot via EL6631

IF GVL.b_mode_laptop THEN 
	P_Laptop_Operate();
ELSIF GVL.b_mode_robot THEN 
	P_PNDataConvert();
	P_Robot_Operate();
ELSIF GVL.b_mode_manual THEN 
	P_Manual_Operate();
END_IF


// ELSE
// 	temp_speed_override:=F_ScalAnalogOut(
// 		n_Input:= REAL_TO_INT(GVL_IO.in_MI1_Poti_Speed),
// 		n_InMin:= 0,
// 		n_InMax:= 32767,
// 		n_OutMin:= 0,
// 		n_OutMax:= 100);
// END_IF

// GVL_VAR.f_MI1_Override:= temp_speed_override;
]]></ST>
    </Implementation>
    <LineIds Name="MAIN">
      <LineId Id="254" Count="13" />
      <LineId Id="52" Count="2" />
      <LineId Id="301" Count="0" />
      <LineId Id="300" Count="0" />
      <LineId Id="275" Count="0" />
      <LineId Id="307" Count="2" />
      <LineId Id="314" Count="0" />
      <LineId Id="310" Count="3" />
      <LineId Id="282" Count="0" />
      <LineId Id="230" Count="10" />
      <LineId Id="5" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>