<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_Control_Mode" Id="{ee662d16-9f8f-400c-b3c1-3f76b012b61b}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_Control_Mode
VAR
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[// ***********************************************************************************
//
// Müller-steinag Gruppe, Kandergrien Einigen, CH-3646 Bern
// ETH Zurich, Building HIF E26, Laura-Hezner-Weg 7, CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Digital Casting System 
// FUNCTION    :  Control mode 
// AUTHOR      :  Weiting Chen
// EMAIL       :  chenw@usi.ch
// Copyright   :  USI Mendrisio; ETH Zürich; Müller-steinag Gruppe (CH) 2023
//
// ***********************************************************************************

GVL.b_mode_manual := GVL_IO.ib_CC1_Button_Mode_Manual; 
GVL.b_mode_laptop := GVL_IO.ib_CC1_Button_Mode_Laptop;


GVL.b_mode_robot := False;
IF GVL.b_mode_manual THEN 
	GVL.s_current_mode := 'Controller';
ELSIF GVL.b_mode_laptop  THEN
	GVL.s_current_mode := 'Laptop';
ELSIF NOT GVL.b_mode_manual AND NOT GVL.b_mode_laptop THEN
	GVL.s_current_mode := 'Robot';
	GVL.b_mode_robot := TRUE;
ELSE
	GVL.s_current_mode := 'None';
END_IF

]]></ST>
    </Implementation>
    <LineIds Name="P_Control_Mode">
      <LineId Id="6" Count="11" />
      <LineId Id="19" Count="1" />
      <LineId Id="37" Count="0" />
      <LineId Id="39" Count="0" />
      <LineId Id="42" Count="0" />
      <LineId Id="73" Count="0" />
      <LineId Id="90" Count="0" />
      <LineId Id="47" Count="1" />
      <LineId Id="50" Count="0" />
      <LineId Id="52" Count="0" />
      <LineId Id="54" Count="0" />
      <LineId Id="78" Count="0" />
      <LineId Id="55" Count="0" />
      <LineId Id="91" Count="0" />
      <LineId Id="88" Count="1" />
      <LineId Id="56" Count="2" />
    </LineIds>
  </POU>
</TcPlcObject>