<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="P_MI1_OnOff" Id="{c8b14d52-094f-4a7e-b91b-4c0d8c76e44c}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM P_MI1_OnOff
VAR_INPUT
	n_Step: INT := 0;	
	b_set_run : BOOL;
END_VAR
VAR
	//
	// BOOL 
	b_Condition: BOOL;
	b_No_Emergency_Stop:BOOL :=TRUE;
	
END_VAR

]]></Declaration>
    <Implementation>
      <ST><![CDATA[//***********************************************************************************
//
// ETH Zürich / Robotic Fabrication Lab
// HIB C 13 / Stefano-Franscini-Platz 1
// CH-8093 Zürich
// 
// ***********************************************************************************
// 
// PROJECT     :  A061 Inline Mixer
// 
// FUNCTION    :  Step chain for mixer on or off 
// 
// AUTHOR      :  Fabio Scotto / Philippe Fleischmann
// 
// EMAIL       :  scotto@arch.ethz.ch / fleischmann@arch.ehtz.ch
// 
// Copyright   :  ETH Zürich (CH) 2020
//
// ***********************************************************************************

// Ignore emergency stop
b_No_Emergency_Stop:=TRUE;

//
// Initalization
IF n_Step=0 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

//
// Wait for start mixer
IF n_Step=10 THEN
	//
	// Check condition 
	b_Condition:= GVL.b_MI1_ReadToDrive AND b_set_run;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=20;
	END_IF
END_IF

//
// Reserve
IF n_Step=20 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=30;
	END_IF
END_IF

//
// Run for mixer 
IF n_Step=30 THEN
	//
	// Check condition 
	b_Condition:= NOT GVL_IO.ib_MI1_Button_Not_Off OR NOT GVL.b_MI1_ReadToDrive OR NOT b_set_run;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=40;
	END_IF
END_IF

//
// Reserve
IF n_Step=40 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition AND b_No_Emergency_Stop THEN
		b_Condition:=FALSE;
		n_Step:=50;
	END_IF
END_IF

//
// Return to step 10 
IF n_Step=50 THEN
	//
	// Check condition 
	b_Condition:=TRUE;
	//
	// Do step
	IF b_Condition THEN
		b_Condition:=FALSE;
		n_Step:=10;
	END_IF
END_IF

//
// Mixer run
GVL.b_MI1_Is_Run:=n_Step=30;]]></ST>
    </Implementation>
    <LineIds Name="P_MI1_OnOff">
      <LineId Id="216" Count="108" />
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>